Fix busted icons on mobile

--- a/src/components/molecules/Stack.css
+++ b/src/components/molecules/Stack.css
@@ -5,7 +5,7 @@
   @apply flex justify-around my-1;
 }
 .wrapper > div img {
-  @apply h-7 md:h-9 my-1 duration-150 transition-all cursor-pointer;
+  @apply h-9 md:h-9 my-1 duration-150 transition-all cursor-pointer;
 }
 .wrapper > div img:hover {
   @apply scale-125;
